--- a/feeds.toml
+++ b/feeds.toml
@@ -16,4 +16,4 @@ titleSelector = "span.prod-name"
 linkSelector = "a"
 contentSelector = "span.sale-period"
 imageSelector = "div.img-wrap img"
-waitUntil = "networkidle"
+waitForSelector = ".launching-calendar-list"
