--- a/feeds.toml
+++ b/feeds.toml
@@ -7,13 +7,4 @@ linkSelector = "h5 a"
 contentSelector = "div.agent_site_info p"
 imageSelector = "div.product_thumb_layer a img"
 waitUntil = "networkidle"
-
-[grandstage]
-title = "ABC마트 그랜드스테이지 온라인몰"
-url = "https://grandstage.a-rt.com/display/calendar"
-entrySelector = "li[class='col-list-item prod-item draw-item']"
-titleSelector = "span.prod-name"
-linkSelector = "a"
-contentSelector = "span.sale-period"
-imageSelector = "div.img-wrap img"
-waitForSelector = ".launching-calendar-list"
+onFail = "stale"
