--- a/feeds.toml
+++ b/feeds.toml
@@ -8,3 +8,14 @@ contentSelector = "div.agent_site_info p"
 imageSelector = "div.product_thumb_layer a img"
 waitUntil = "networkidle"
 onFail = "stale"
+
+[ssmuniverse_draw]
+title = "스스므 ─ DRAW"
+url = "https://ssmuniverse.com/board?category=12"
+entrySelector = "div.exsi-item.grid.overflow-hidden a.card-item.grid-item.view-hidden"
+titleSelector = "div.column-title.noto-h4.column-mb-15.text-break.text-overflow-3"
+linkSelector = "*"
+contentSelector = "div.column-content.noto-pr.mb-5.column-lineheight.w-100.text-break.text-overflow-5"
+imageSelector = "img.column-img"
+waitUntil = "networkidle"
+onFail = "stale"
