--- a/feeds.toml
+++ b/feeds.toml
@@ -9,7 +9,7 @@ imageSelector = "div.product_thumb_layer a img"
 waitUntil = "networkidle"
 onFail = "stale"
 
-[ssmuniverse_draw]
+[ssmuniverse]
 title = "스스므 ─ DRAW"
 url = "https://ssmuniverse.com/board?category=12"
 entrySelector = "div.exsi-item.grid.overflow-hidden a.card-item.grid-item.view-hidden"
