--- a/feeds.toml
+++ b/feeds.toml
@@ -19,3 +19,13 @@ contentSelector = "div.column-content.noto-pr.mb-5.column-lineheight.w-100.text-
 imageSelector = "img.column-img"
 waitUntil = "networkidle"
 onFail = "stale"
+
+[shoeprize]
+title = "슈프라이즈"
+url = "https://www.shoeprize.com/"
+entrySelector = "ul.product_list li"
+titleSelector = "div.name"
+linkSelector = "div.img_area a"
+contentSelector = "div.text_area"
+imageSelector = "div.img_area a img"
+waitUntil = "networkidle"
