--- a/feeds.toml
+++ b/feeds.toml
@@ -28,3 +28,14 @@ titleSelector = "div.name"
 linkSelector = "div.img_area a"
 contentSelector = "div.text_area"
 waitUntil = "networkidle"
+
+
+[musinsa_raffle]
+title = "무신사 ─ Raffle"
+url = "https://store.musinsa.com/app/raffle/lists"
+entrySelector = "ul.raffle-list li"
+titleSelector = "strong.tit"
+linkSelector = "a.view"
+contentSelector = "a.view"
+imageSelector = "a.view img"
+waitUntil = "networkidle"
