--- a/feeds.toml
+++ b/feeds.toml
@@ -32,9 +32,9 @@ waitUntil = "networkidle"
 [musinsa]
 title = "무신사 ─ Raffle"
 url = "https://store.musinsa.com/app/raffle/lists"
-entrySelector = "ul.raffle-list li"
+entrySelector = "a.view"
 titleSelector = "strong.tit"
-linkSelector = "a.view"
-contentSelector = "a.view"
-imageSelector = "a.view img"
+linkSelector = "*"
+contentSelector = "*"
+imageSelector = "img"
 waitUntil = "networkidle"
