--- a/feeds.toml
+++ b/feeds.toml
@@ -37,4 +37,4 @@ titleSelector = "strong.tit"
 linkSelector = "*"
 contentSelector = "*"
 imageSelector = "img"
-waitUntil = "networkidle"
+waitForSelector = "ul.raffle-list li"
