--- a/feeds.toml
+++ b/feeds.toml
@@ -28,6 +28,7 @@ titleSelector = "div.name"
 linkSelector = "div.img_area a"
 contentSelector = "div.text_area"
 waitUntil = "networkidle"
+onFail = "stale"
 
 [musinsa]
 title = "무신사 ─ Raffle"
@@ -37,4 +38,5 @@ titleSelector = "strong.tit"
 linkSelector = "*"
 contentSelector = "*"
 imageSelector = "img"
-waitForSelector = "ul.raffle-list li"
+waitForSelector = "ul.raffle-list li a.view"
+onFail = "stale"
