--- a/feeds.toml
+++ b/feeds.toml
@@ -30,6 +30,16 @@ contentSelector = "div.text_area"
 waitUntil = "networkidle"
 onFail = "stale"
 
+[shoeprize_ko]
+title = "슈프라이즈"
+url = "https://www.shoeprize.com/today/?filter={%22excludeKor%22:0,%22includeKor%22:1,%22excludeEnd%22:0}"
+entrySelector = "ul.product_list li"
+titleSelector = "div.name"
+linkSelector = "div.img_area a"
+contentSelector = "div.text_area"
+waitUntil = "networkidle"
+onFail = "stale"
+
 [musinsa]
 title = "무신사 ─ Raffle"
 url = "https://store.musinsa.com/app/raffle/lists"
