--- a/feeds.toml
+++ b/feeds.toml
@@ -31,8 +31,18 @@ waitUntil = "networkidle"
 onFail = "stale"
 
 [shoeprize_ko]
-title = "슈프라이즈"
+title = "슈프라이즈 ─ 국내"
 url = "https://www.shoeprize.com/today/?filter={%22excludeKor%22:0,%22includeKor%22:1,%22excludeEnd%22:0}"
+entrySelector = "ul.product_list li"
+titleSelector = "div.name"
+linkSelector = "div.img_area a"
+contentSelector = "div.text_area"
+waitUntil = "networkidle"
+onFail = "stale"
+
+[shoeprize_oversea]
+title = "슈프라이즈 ─ 해외"
+url = "https://www.shoeprize.com/today/?filter={%22excludeKor%22:1,%22includeKor%22:0,%22excludeEnd%22:0}"
 entrySelector = "ul.product_list li"
 titleSelector = "div.name"
 linkSelector = "div.img_area a"
