--- a/feeds.toml
+++ b/feeds.toml
@@ -36,7 +36,7 @@ url = "https://www.shoeprize.com/today/?filter={%22excludeKor%22:0,%22includeKor
 entrySelector = "ul.product_list li"
 titleSelector = "div.name"
 linkSelector = "div.img_area a"
-contentSelector = "span.time"
+contentSelector = "span.time_count"
 waitUntil = "networkidle"
 onFail = "stale"
 
@@ -46,7 +46,7 @@ url = "https://www.shoeprize.com/today/?filter={%22excludeKor%22:1,%22includeKor
 entrySelector = "ul.product_list li"
 titleSelector = "div.name"
 linkSelector = "div.img_area a"
-contentSelector = "span.time"
+contentSelector = "span.time_count"
 waitUntil = "networkidle"
 onFail = "stale"
 
