--- a/feeds.toml
+++ b/feeds.toml
@@ -63,10 +63,9 @@ waitUntil = "networkidle"
 [musinsa]
 title = "무신사 ─ Raffle"
 url = "https://www.musinsa.com/event/raffles?raffles_include_state=S"
-entrySelector = "a.view"
-titleSelector = "strong.tit"
-linkSelector = "*"
-contentSelector = "*"
-imageSelector = "img"
-waitForSelector = "ul.raffle-list li a.view"
-onFail = "stale"
+entrySelector = "ul.raffle-list li"
+titleSelector = "a.view strong.tit"
+linkSelector = "a.view"
+contentSelector = "span.brand"
+imageSelector = "a.view img"
+waitForSelector = "ul.raffle-list li"
