--- a/feeds.toml
+++ b/feeds.toml
@@ -63,9 +63,9 @@ waitUntil = "networkidle"
 [musinsa]
 title = "무신사 ─ Raffle"
 url = "https://www.musinsa.com/event/raffles?raffles_include_state=S"
-entrySelector = "ul.raffle-list li"
-titleSelector = "a.view strong.tit"
-linkSelector = "a.view"
+entrySelector = "a.view"
+titleSelector = "strong.tit"
+linkSelector = "*"
 contentSelector = "span.brand"
-imageSelector = "a.view img"
-waitForSelector = "ul.raffle-list li"
+imageSelector = "img"
+waitForSelector = "a.view"
