--- a/feeds.toml
+++ b/feeds.toml
@@ -67,4 +67,4 @@ titleSelector = "strong.tit"
 linkSelector = "*"
 contentSelector = "span.brand"
 imageSelector = "img"
-waitForSelector = "a.view"
+waitUntil = "networkidle"
