--- a/feeds.toml
+++ b/feeds.toml
@@ -53,7 +53,7 @@ onFail = "stale"
 [shoeprize_culture]
 title = "슈프라이즈 - 컬처"
 url = "https://www.shoeprize.com/culture/"
-entrySelector = "ul.culture_list li"
+entrySelector = "ul.culture_list li:not(.ad_area)"
 titleSelector = "div.post_title"
 linkSelector = "a"
 contentSelector = "div.post_content"
